# libexpidus1util

./: .gitignore  AUTHORS  Makefile.am  NEWS  README.md  THANKS  TODO  autogen.sh  configure.ac.in
docs/: Makefile.am  libexpidus1util-docs.xml  libexpidus1util-overrides.txt  libexpidus1util-sections.txt
expidus1-kiosk-query/: Makefile.am  main.c
libexpidus1util/: Libexpidus1util-1.0.gir  Libexpidus1util-1.0.typelib  Makefile.am  abicheck.sh  expidus-fileutils.c  expidus-generics.h  expidus-i18n.c  expidus-kiosk.c  expidus-kiosk.h  expidus-license.c  expidus-license.h  expidus-miscutils.c  expidus-miscutils.h  expidus-posix-signal-handler.c  expidus-posix-signal-handler.h  expidus-rc-config.c  expidus-rc-private.h  expidus-rc-simple.c  expidus-rc.c  expidus-rc.h  expidus-resource.c  expidus-resource.h  expidus-utf8.h  libexpidus1util-1.0.pc.in  libexpidus1util-config.c  libexpidus1util-config.h.in  libexpidus1util-private.c  libexpidus1util-private.h  libexpidus1util.h  libexpidus1util.symbols  make-libexpidus1util-alias.pl  xfce-debug.h  xfce-fileutils.h  xfce-generics.h  xfce-i18n.h  xfce-kiosk.c  xfce-kiosk.h  xfce-license.c  xfce-license.h  xfce-miscutils.c  (+11 more)
po/: POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  (+24 more)
python-example/: test-introspection.py
