# $Id$

CLEANFILES =

AM_CPPFLAGS =								\
	-I$(top_srcdir)							\
	-DDEFAULT_XDG_CACHE_HOME=\"~/.cache\"				\
	-DDEFAULT_XDG_DATA_HOME=\"~/.local/share\"			\
	-DDEFAULT_XDG_CONFIG_HOME=\"~/.config\"				\
	-DDEFAULT_XDG_DATA_DIRS=\"$(datadir):/usr/local/share:/usr/share\" \
	-DDEFAULT_XDG_CONFIG_DIRS=\"$(sysconfdir)/xdg:$(sysconfdir)/expidus1:/etc/xdg\" \
	-DDATADIR=\"$(datadir)\"					\
	-DSYSCONFDIR=\"$(sysconfdir)\"					\
	-DPACKAGE_LOCALE_DIR=\"$(localedir)\"				\
	-DG_LOG_DOMAIN=\"libexpidus1util\"					\
	-DKIOSKDIR=\"$(sysconfdir)/xdg/expidus1/kiosk\"			\
	-DKIOSKDEF=\"ALL\"						\
	-DLIBEXPIDUS1UTIL_COMPILATION

lib_LTLIBRARIES =							\
	libexpidus1util.la

libexpidus1util_headers =							\
	expidus-debug.h							\
	expidus-fileutils.h						\
	expidus-generics.h							\
	expidus-i18n.h							\
	expidus-kiosk.h							\
	expidus-license.h							\
	expidus-miscutils.h						\
	expidus-posix-signal-handler.h					\
	expidus-rc.h							\
	expidus-resource.h							\
	expidus-utf8.h

libexpidus1util_built_sources =						\
	libexpidus1util-alias.h						\
	libexpidus1util-aliasdef.c

libexpidus1utilincludedir = $(includedir)/expidus1/libexpidus1util
libexpidus1utilinclude_HEADERS =						\
	$(libexpidus1util_headers)						\
	libexpidus1util.h							\
	libexpidus1util-config.h

libexpidus1util_la_SOURCES =						\
	$(libexpidus1utilinclude_HEADERS)					\
	$(libexpidus1util_built_sources)					\
	libexpidus1util-config.c						\
	libexpidus1util-private.c						\
	libexpidus1util-private.h						\
	expidus-fileutils.c						\
	expidus-i18n.c							\
	expidus-kiosk.c							\
	expidus-license.c							\
	expidus-miscutils.c						\
	expidus-posix-signal-handler.c					\
	expidus-private.h							\
	expidus-rc.c							\
	expidus-rc-config.c						\
	expidus-rc-private.h						\
	expidus-rc-simple.c						\
	expidus-resource.c							\
	expidus-utf8.c

libexpidus1util_la_CFLAGS = 						\
	$(GLIB_CFLAGS) \
	$(GIO_CFLAGS) \
	$(GOBJECT_CFLAGS)

libexpidus1util_la_LDFLAGS =						\
	-export-dynamic							\
	-version-info $(LIBEXPIDUS1UTIL_VERINFO)				\
	-export-symbols-regex "^[^_].*"					\
	-no-undefined

libexpidus1util_la_LIBADD =						\
	$(GLIB_LIBS) \
	$(GIO_LIBS) \
	$(GOBJECT_LIBS)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libexpidus1util-1.0.pc


-include $(INTROSPECTION_MAKEFILE)
INTROSPECTION_GIRS =
INTROSPECTION_SCANNER_ENV = CC="$(CC)"
INTROSPECTION_SCANNER_ARGS = \
	--add-include-path=$(srcdir) \
	--warn-all \
	--identifier-prefix=Xfce \
	--identifier-prefix=expidus \
	--identifier-prefix=libexpidus \
	-DLIBEXPIDUS1UTIL_COMPILATION \
	--c-include=libexpidus1util/libexpidus1util.h
INTROSPECTION_COMPILER_ARGS = \
	--includedir=$(srcdir) \
	--includedir=.

if HAVE_INTROSPECTION
introspection_sources = $(filter-out %private.h, $(libexpidus1util_la_SOURCES))

Libexpidus1util-1.0.gir: libexpidus1util.la Makefile
Libexpidus1util_1_0_gir_INCLUDES = GObject-2.0 GLib-2.0
Libexpidus1util_1_0_gir_CFLAGS = $(AM_CPPFLAGS)
Libexpidus1util_1_0_gir_LIBS = libexpidus1util.la
Libexpidus1util_1_0_gir_FILES = $(introspection_sources)
Libexpidus1util_1_0_gir_EXPORT_PACKAGES = libexpidus1util-1.0
INTROSPECTION_GIRS += Libexpidus1util-1.0.gir

girdir = $(datadir)/gir-1.0
gir_DATA = $(INTROSPECTION_GIRS)

typelibdir = $(libdir)/girepository-1.0
typelib_DATA = $(INTROSPECTION_GIRS:.gir=.typelib)

CLEANFILES += $(gir_DATA) $(typelib_DATA)
endif

##
## Rules to auto-generate built sources
##
## This is a bit tricky with automake, and non-trivial to implement. The
## rules below seem to work fine and don't seem to break the build, but
## they are only enabled in maintainer mode, so arbitrary users don't get
## trapped in automake's oddities. Therefore we ship the autogenerated
## files as part of the dist tarball.
##
if MAINTAINER_MODE
CLEANFILES +=								\
	actual-abi							\
	expected-abi

DISTCLEANFILES =							\
	$(libexpidus1util_built_sources)

BUILT_SOURCES =								\
	$(libexpidus1util_built_sources)

libexpidus1util-alias.h: make-libexpidus1util-alias.pl libexpidus1util.symbols
	$(PERL) $(srcdir)/make-libexpidus1util-alias.pl < $(srcdir)/libexpidus1util.symbols > libexpidus1util-alias.h

libexpidus1util-aliasdef.c: make-libexpidus1util-alias.pl libexpidus1util.symbols
	$(AM_V_GEN) $(PERL) $(srcdir)/make-libexpidus1util-alias.pl -def < $(srcdir)/libexpidus1util.symbols > libexpidus1util-aliasdef.c

endif

# required for gtk-doc
dist-hook: all

EXTRA_DIST =								\
	abicheck.sh							\
	libexpidus1util.symbols						\
	libexpidus1util-alias.h						\
	libexpidus1util-aliasdef.c						\
	make-libexpidus1util-alias.pl

if ENABLE_VAPIGEN
-include $(VAPIGEN_MAKEFILE)

libexpidus1util-1.0.vapi: Libexpidus1util-1.0.gir

VAPIGEN_VAPIS = libexpidus1util-1.0.vapi
VAPIGEN_GIRDIRS = $(prefix)/share/gir-1.0

## libexpidus1util_1_0_vapi_DEPS = libexpidus1util-1.0
libexpidus1util_1_0_vapi_METADATADIRS = $(srcdir)
libexpidus1util_1_0_vapi_FILES = Libexpidus1util-1.0.gir

vapidir = $(datadir)/vala/vapi
vapi_DATA = $(VAPIGEN_VAPIS)
## $(VAPIGEN_VAPIS:.vapi=.deps)

endif

if HAVE_GNUC_VISIBILITY
TESTS = abicheck.sh
endif

# vi:set ts=8 sw=8 noet ai nocindent:
